# eic-smear

./: .ChangeLog.swp  .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  Doxyfile  Makefile  Makefile.am  Makefile.am.betterbutdifferent  NEWS  README  README.md  analysis.C  configure.ac
.github/workflows/: linux-eic-shell.yml
bak/: Forester.h.orig  Makefile.am  Makefile.in  README  configure
bak/autom4te.cache/: output.0  output.2  output.3  output.4  output.5  output.7  requests  traces.0  traces.1  traces.2  traces.3  traces.4  traces.5  traces.6  traces.7  traces.8
cint/: LinkDef.h  LinkDef.h.betterbutdifferent  LinkDefNoPythia.h  LinkDefPythia.h  hadronicLinkDef.h  smearLinkDef.h
cint/.svn/: all-wcprops  entries
cmake/: custom_generate_root_dict.cmake
cmake/.svn/: all-wcprops  entries
cmake/Modules/: FindROOT.cmake
data/.svn/: all-wcprops  entries
deprecated/: CMakeLists.txt.orig  FindROOT.cmake.orig  README.md  smearBeAST.cxx
doc/html/: _acceptance_8cxx.html  _acceptance_8cxx_source.html  _acceptance_8h.html  _acceptance_8h_source.html  _beam_particles_8cxx.html  _beam_particles_8cxx_source.html  _beam_particles_8h.html  _beam_particles_8h_source.html  _bremsstrahlung_8cxx.html  _bremsstrahlung_8cxx_source.html  _bremsstrahlung_8h.html  _bremsstrahlung_8h_source.html  _build_tree_8cxx.html  _build_tree_8cxx_source.html  _detector_8cxx.html  _detector_8cxx_source.html  _detector_8h.html  _detector_8h_source.html  _device_8cxx.html  _device_8cxx_source.html  _device_8h.html  _device_8h_source.html  _dis_kinematics_8h.html  _dis_kinematics_8h_source.html  _distributor_8cxx.html  _distributor_8cxx_source.html  _distributor_8h.html  _distributor_8h_source.html  _event_base_8h.html  _event_base_8h.js  _event_base_8h_source.html  _event_dis_8cxx.html  _event_dis_8cxx_source.html  _event_dis_8h.html  _event_dis_8h_source.html  _event_dis_factory_8cxx.html  _event_dis_factory_8cxx_source.html  _event_dis_factory_8h.html  _event_dis_factory_8h_source.html  _event_djangoh_8cxx.html  (+439 more)
doxygen/html/: _acceptance_8cxx.html  _acceptance_8cxx_source.html  _acceptance_8h.html  _acceptance_8h_source.html  _beam_particles_8cxx.html  _beam_particles_8cxx_source.html  _beam_particles_8h.html  _beam_particles_8h_source.html  _bremsstrahlung_8cxx.html  _bremsstrahlung_8cxx_source.html  _bremsstrahlung_8h.html  _bremsstrahlung_8h_source.html  _build_tree_8cxx.html  _build_tree_8cxx.js  _build_tree_8cxx_source.html  _detector_8cxx.html  _detector_8cxx_source.html  _detector_8h.html  _detector_8h_source.html  _device_8cxx.html  _device_8cxx_source.html  _device_8h.html  _device_8h_source.html  _dis_kinematics_8h.html  _dis_kinematics_8h_source.html  _distributor_8cxx.html  _distributor_8cxx_source.html  _distributor_8h.html  _distributor_8h_source.html  _event_base_8h.html  _event_base_8h_source.html  _event_dis_8cxx.html  _event_dis_8cxx_source.html  _event_dis_8h.html  _event_dis_8h_source.html  _event_dis_factory_8cxx.html  _event_dis_factory_8cxx_source.html  _event_dis_factory_8h.html  _event_dis_factory_8h_source.html  _event_djangoh_8cxx.html  (+582 more)
eicpy/: __init__.py  binning.py  build.py  cpplint.py  qaplots.py  verify.py
eicpy/.svn/: all-wcprops  entries
include/: Acceptance.h  Armory.h  Bremsstrahlung.h  Detector.h  Device.h  DisKinematics.h  EventBase.h  EventDjangoh.h  EventDpmjet.h  EventFactory.h  EventMC.h  EventMCFilterABC.h  EventMilou.h  EventPepsi.h  EventPythia.h  EventRapgap.h  EventS.h  EventSmear.h  File.h  Forester.h  GeneratorType.h  Kinematics.h  Particle.h  ParticleID.h  ParticleIdentifier.h  ParticleMC.h  ParticleMCS.h  ParticleMCSmeared.h  Pid.h  Pythia6.h  Pythia6EventBuilder.h  Pythia6ParticleBuilder.h  Smear.h  SmearEvent.h  Smearer.h  VirtualEvent.h  VirtualParticle.h  functions.h
include/.svn/: all-wcprops  entries
include/eicsmear/: HepMC_3_2_4_ReaderFactory.h  functions.h
scripts/: JLEICDetector.cxx  PerfectDetector.cxx  STARDetector.cpp  ZEUSDetector.cpp  build.cxx  compiled_runpythia.cpp  ePHENIXDetector.cpp  eic-smear.cxx  make_tree.C  runpythia.cpp  smearBeAST.cxx  smearHandBook.cxx  smearNaiveHandBook.cxx  tree.py
scripts/.svn/: all-wcprops  entries
src/: Acceptance.cxx  Armory.cxx  BeamParticles.cxx  Bremsstrahlung.cxx  BuildTree.cxx  Detector.cxx  Device.cxx  EventDjangoh.cxx  EventDpmjet.cxx  EventFactory.cxx  EventMC.cxx  EventMilou.cxx  EventPepsi.cxx  EventPythia.cxx  EventRapgap.cxx  EventSmear.cxx  File.cxx  Forester.cxx  Kinematics.cxx  ParticleID.cxx  ParticleIdentifier.cxx  ParticleMC.cxx  ParticleMCS.cxx  ParticleMCSmeared.cxx  Pid.cxx  Pythia6.cxx  Pythia6EventBuilder.cxx  Pythia6ParticleBuilder.cxx  Smear.cxx  SmearTree.cxx  functions.cxx  gzstream.cc  smear_event.cxx
src/.svn/: all-wcprops  entries
src/erhic/: BeamParticles.cxx  BuildTree.cxx  EventDEMP.cxx  EventDis.cxx  EventDjangoh.cxx  EventDpmjet.cxx  EventFactory.cxx  EventFactoryHepMC.cxx  EventGmcTrans.cxx  EventHepMC.cxx  EventMC.cxx  EventMilou.cxx  EventPepsi.cxx  EventPythia.cxx  EventRapgap.cxx  EventSartre.cxx  EventSimple.cxx  File.cxx  Forester.cxx  Forester.cxx.orig  ForesterStatus.cxx.betterbutdifferent  Kinematics.cxx  ParticleIdentifier.cxx  ParticleMC.cxx  Pid.cxx  Pythia6.cxx  Pythia6EventBuilder.cxx  Pythia6ParticleBuilder.cxx  TreeToHepMC.cxx
src/hadronic/: EventMC.cxx  EventPythia.cxx  EventSmear.cxx  ParticleMC.cxx  Pythia6EventFactory.cxx
src/smear/: Acceptance.cxx  Armory.cxx  BarrelCalo.cxx  Bremsstrahlung.cxx  Detector.cxx  Device.cxx  Distributor.cxx  EndcapCalo.cxx  (+12 more)
tests/: CMakeLists.txt  DIS_hepmc.txt  NC_hepmc.txt  ep_sartre.txt  input.data.ep_hiQ2.20x250.small.eic  input.data.ep_lowQ2.20x250.small.eic  make_tree.C  particlegun.cxx  qaplots.cxx  qaplots.hh  simple_gen.txt  test_simple_buildtree.cxx
tests/test_missing_particles/: BeASTDetector.cc  BeASTDetector.h  CMakeLists.txt  README.md  ZeusDetector.cc  ZeusDetector.h  ePHENIXDetector.cc  ePHENIXDetector.h  test_missing_particles.cc
tests/test_missing_particles/dis/: README.md  functions.h
tests/test_simple/: CMakeLists.txt  analysis.C  test_simple_buildtree.cxx
(+384 files in other folders)
